--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-astroid==2.11.2
-autopep8==1.6.0
-colorama==0.4.4
+astroid==2.11.7
+autopep8==1.7.0
+colorama==0.4.5
 dill==0.3.4
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
-numpy==1.22.3
+numpy==1.23.2
 platformdirs==2.5.1
-pycodestyle==2.8.0
-pylint==2.13.3
+pycodestyle==2.9.1
+pylint==2.14.5
 toml==0.10.2
 tomli==2.0.1
+tomlkit==0.11.4
 wrapt==1.14.0
